--- a/HTML/003.parrafos.html
+++ b/HTML/003.parrafos.html
@@ -11,7 +11,16 @@
 <h1>
     <p>Esto es un parrafo con encabezado h1</p>
 </h1>
-
+<h2>Es es un encabezado h2</h2>
+<p>Esto es un párrafo</p>
+<h3>Esto es un encabezado h3</h3>
+<p>Esto es un párrafo</p>
+<h4>Esto es un encabezado h4</h4>
+<p>Esto es un párrafo</p>
+<h5>Esto es un encabezado h5</h5>
+<p>Esto es un párrafo</p>
+<h6>Esto es un encabezado h6</h6>
+<p>Esto es un párrafo</p>
 
 </body>
 </html>
