--- a/HTML/012.formulario1.html
+++ b/HTML/012.formulario1.html
@@ -53,12 +53,82 @@
 
         <div>
             <label for="salary"> Salario</label>
-            ><input type="number" name="salary" id="salary">
+            <input type="number" name="salary" id="salary">
         </div>
 
+        <div>
+            <label for="weight"> Peso (kg)</label>
+            <input type="number" name="weight" id="weight" step="0.50">
+        </div>
 
+        <div>
+            <label for="height"> Altura (cm)</label>
+            <input type="number" name="height" id="height" step="0.50" min="50" max="240"> cm
+        </div>
 
+        <div>
+            <label for="bio"> Biografía</label>
+            <textarea name="bio" id="bio" cols="40" rows="10" minlength="10" maxlength="100"></textarea>
+        </div>
 
+        <!-- RADIO BOTON -->
+
+        <div>
+            <label>Género</label>
+        </div>
+
+        <div>
+            <input type="radio" id="male" name="genero" value="male">
+            <label for="male"> Masculino </label>
+        </div>
+
+        <div>
+            <input type="radio" id="female" name="genero" value="female">
+            <label for="female"> Femenino </label>
+        </div>
+
+        <div>
+            <input type="radio" inputmode="other" name="genero" value="other">
+            <label for="other"> Otro </label>
+        </div>
+
+        <!-- MENU DESPLEGABLE -->
+
+        <div>
+            <label for="state"> Comunidad Autónoma: </label>
+            <select name="state" id="state">
+                <option value="m"> Madrid </option>
+                <option value="c"> Cataluña </option>
+                <option value="a"> Andalucia </option>
+                <option value="g"> Galicia </option>
+
+            </select>
+        </div>
+        <!-- FIN DEL MENU  DESPLEGABLE -->
+
+        <div>
+            <label for="comentarios"> Comentarios: </label>
+            <textarea name="comentarios" id="comentarios" cols="60" rows="3"></textarea>
+        </div>
+
+        <div>
+            <label for="birthday"> Fecha de nacimiento:</label>
+            <input type="date" name="birthday" id="birthday" min="2010-01-01" max="2023-12-31">
+        </div>
+
+        <div>
+            <label for="CourseDataTime"> Fecha de Comienzo del Curso de Angular</label>
+            <input type="datetime-local" id="CourseDataTime" name="CourseDataTime">
+        </div>
+
+        <div>
+            <input type="checkbox" id="terms" name="terms" required>
+            <label for="terms"> Acepto nuestra polica de privacidad</label>
+        </div>
+
+        <div>
+            <button type="submit"> Enviar </button>
+        </div>
 
     </form>
 
