--- a/CSS/010.css.bootstrap3.html
+++ b/CSS/010.css.bootstrap3.html
@@ -55,7 +55,7 @@
                   <li><a class="dropdown-item" href="#">Ropa de Mujer</a></li>
                   <li><a class="dropdown-item" href="#">Ropa de Hombre</a></li>
                   <li><a class="dropdown-item" href="#">Ropa de Niños</a></li>
-                  <li><a class="dropdown-item" href="#">Productos con descuento</a></li>
+                  <li><a class="dropdown-item" href="012.css-bootstrap5.html" target="_blank">Productos con descuento</a></li>
 
                 </ul>
               </li>
