--- a/CSS/010.css.bootstrap3.html
+++ b/CSS/010.css.bootstrap3.html
@@ -13,7 +13,7 @@
       }
       .card{
         margin-top: 20px;
-        background-color: rgb(18, 18, 19);
+        background-color: rgb(20, 20, 20);
         color: white;
       }
       .card-link{
@@ -38,7 +38,7 @@
    
 
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
+        <div class="container">
           <img src="styles/logoTienda.png" alt="Logo" width="50" height="50" class="d-inline-block align-text-top">
           Ejercicios de Código
           <a class="navbar-brand" href="#">Infinity</a>
