cambios en pruebas

--- a/CSS/PRUEBAS.html
+++ b/CSS/PRUEBAS.html
@@ -11,6 +11,8 @@
       
       .navbar{
         background-color: black;
+        width: auto;
+        height: fit-content;
       }
       h1{
         color: white;
