REvision de ejercicios

--- a/CSS/010.css.bootstrap3.html
+++ b/CSS/010.css.bootstrap3.html
@@ -14,7 +14,7 @@
       .card{
         margin-top: 20px;
         background-color: rgb(20, 20, 20);
-        color: white;
+        color: rgb(245, 238, 238);
       }
       .card-link{
         color: white;
