--- a/CSS/PRUEBAS.html
+++ b/CSS/PRUEBAS.html
@@ -35,8 +35,8 @@
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
      
-      <h1 style="height: 150px; font-size: 100px;">Mercedes Benz</h1>
-      <img src="styles/MERCEDES_BENZ/logo_mercedes.jpg" class="img-fluid">
+      <h1 style="height: 200px; font-size: 90px;">Mercedes Benz</h1>
+      <img src="styles/MERCEDES_BENZ/logo_mercedes.jpg" alt="Mercedes" class="img-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -63,7 +63,7 @@
               Menu
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="PRUEBAS.TURISMO.html">Turismos</a></li>
+              <li><a class="dropdown-item" href="#">Turismos</a></li>
               <li><a class="dropdown-item" href="#">Motos</a></li>
               <li><a class="dropdown-item" href="#">Deportivos</a></li>
               
